# image-to-scad

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
_bmad-output/: development-progress-log.md  project-context.md
_bmad-output/implementation-artifacts/: 1-1-project-structure-setup.md
_bmad-output/planning-artifacts/: architecture.md  bmm-workflow-status.yaml  epics-and-stories.md  epics.md  implementation-readiness-report-2026-01-09.md  prd.md  product-brief-image-to-ai-to-stil-2026-01-08.md
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/_config/ides/: claude-code.yaml
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
docs/: PROJECT_PLAN.md  SETUP.md
examples/sample_outputs/: test_output_low.scad
scripts/: download_model.py  test_e2e.py
src/image_to_scad/: __init__.py  __main__.py  cli.py  config.py  converter.py  exceptions.py
src/image_to_scad/exporters/: __init__.py  stl_exporter.py
src/image_to_scad/pipeline/: __init__.py  depth_analyzer.py  depth_estimator.py  image_loader.py  scad_generator.py
src/image_to_scad/utils/: __init__.py  file_utils.py  logging.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_cli_integration.py  test_pipeline_integration.py
tests/unit/: __init__.py  test_config.py  test_depth_analyzer.py  test_depth_estimator.py  test_exceptions.py  test_image_loader.py  test_scad_generator.py
